# gameanalytics-sdk-cpp

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  build.py  build_linux.sh  build_windows.cmd  conanfile.py  gh_create_release.py  setup.py
.github/workflows/: build.yml  cmake.yml  coverage.yml  create_release.yml
CMakeIncludes/: eval_condition_macro.cmake
include/GameAnalytics/: GameAnalytics.h
sample/: CMakeLists.txt  Main.cpp
source/dependencies/crossguid/: CMakeLists.txt  guid.cpp  guid.h
source/dependencies/miniz/: GA_Zip.cpp
source/dependencies/stacktrace/stacktrace/: call_stack_msvc.cpp
source/dependencies/stackwalker/: StackWalker.cpp
source/gameanalytics/: GACommon.h  GADevice.cpp  GADevice.h  GAEvents.cpp  GAEvents.h  GAHTTPApi.cpp  GAHTTPApi.h  GAHealth.cpp  GAHealth.h  GALogger.cpp  GALogger.h  GAState.cpp  GAState.h  GAStore.cpp  GAStore.h  GAThreading.cpp  GAThreading.h  GAUtilities.cpp  GAUtilities.h  GAValidator.cpp  GAValidator.h  GameAnalytics.cpp  GameAnalytics.h  GameAnalyticsExtern.cpp  GameAnalyticsExtern.h
source/gameanalytics/Platform/: GADeviceOSX.h  GADeviceOSX.mm  GADevicePlatform.h  GALinux.cpp  GALinux.h  GAMacOS.cpp  GAMacOS.h  GAPlatform.cpp  GAPlatform.h  GAUwp.cpp  GAUwp.h  GAWin32.cpp  GAWin32.h
test/: GAHealthTests.cpp  GAHealth_test.cpp  GAStateTests.cpp  GATests.cpp  GAUtilitiesTests.cpp  GAValidatorTests.cpp  main.cpp
